<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="307dp"
            android:layout_height="61dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView21"
            app:layout_constraintTop_toBottomOf="@+id/imageView20"
            app:srcCompat="@drawable/rectangle_11" />

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="262dp"
            android:layout_height="86dp"
            android:layout_marginStart="-20dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toEndOf="@+id/imageView24"
            app:layout_constraintTop_toBottomOf="@+id/imageView22"
            app:srcCompat="@drawable/rectangle_12" />

        <ImageView
            android:id="@+id/imageView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView26"
            app:layout_constraintTop_toBottomOf="@+id/imageView25"
            app:srcCompat="@drawable/rectangle_13" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="wrap_content"
            android:layout_height="859dp"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/rectangle_4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="128dp"
            android:fontFamily="@font/abel"
            android:text="@string/поддержка"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/rectangle_3" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView12"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView28"
            app:srcCompat="@drawable/bar_graph" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView15"
            app:srcCompat="@drawable/cogwheel" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="125dp"
            android:layout_height="52dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="140dp"
            android:fontFamily="@font/abel"
            android:text="@string/обращение_номер"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView20"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="147dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:srcCompat="@drawable/question" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView20"
            app:srcCompat="@drawable/profile" />

        <ImageView
            android:id="@+id/imageView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="235dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView20"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="282dp"
            android:layout_height="56dp"
            android:layout_marginStart="34dp"
            android:text="@string/текст1"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView22"
            app:layout_constraintStart_toStartOf="@+id/imageView22" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView19"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_launcher_new_foreground" />

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView22"
            app:srcCompat="@drawable/ic_launcher_new_foreground" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="203dp"
            android:layout_height="84dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/текст2"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/imageView25"
            app:layout_constraintTop_toBottomOf="@+id/imageView22" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="30dp"
            android:text="@string/текст3"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/imageView27"
            app:layout_constraintEnd_toStartOf="@+id/imageView26" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="190dp"
            android:text="@string/закрыто"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView13"
            app:srcCompat="@drawable/vaccinered" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>